# MaskedPyramidImages

./: CMakeLists.txt  LICENSE  README.md  conanfile.py  vcpkg.json
.github/workflows/: build.yml
PyramidTiffData/: CMakeLists.txt  PluginInfo.json
PyramidTiffData/src/: OmeTiffPyramid.cpp  OmeTiffPyramid.h  PolygonData.cpp  PolygonData.h  PyramidInfoAction.cpp  PyramidInfoAction.h  PyramidTiffData.cpp  PyramidTiffData.h  UtilsJson.cpp  UtilsJson.h  UtilsRoiArrangement.cpp  UtilsRoiArrangement.h  UtilsTransform.cpp  UtilsTransform.h
PyramidTiffLoader/: CMakeLists.txt  PluginInfo.json
PyramidTiffLoader/src/: PyramidTiffLoader.cpp  PyramidTiffLoader.h
test/: CMakeLists.txt  main.cpp
